fixed screen rotation
fixed filters
version 44 patient
added doctors map with clustering
currently it has some navigation problems
you can toggle between list and map
version 45 patient
doctors favorite on map
geolocation
version 46 patient
fixed phone confirmation
fixed image upload on previous android versions
fixed insurances
added appointments spacer when it's only one in category,
Telemedicine button now shows message about 15 min before appointment time
code input dialog changed
phone now have input mask.
fixed profile update
version 50 patient
video call, keep screen on experiment
version 51 patient
profile update on back
version 52 patient
profile avatar image and insurance image size limit dialog
added phone mask to emergency contact
phone mask is fixed, now properly editable in emergency contact and change phone (this is temp fix)
emergency contact fields jumping fix
version 53 patient
doctors scroll fixes
version 54 patient
email field fixed
validation added to email and password reset
version 55 patient
code input size fix
telehealth wait time from server
version 57 patient
added finish with result navigation when changing password
fixed google auth infinite back
doctor profile demonstration
added doctor insurance
added doctor clinic info blank screen (temporary)
patient fields and doctor field separated in profile
added doctor scheduler demonstration
version 58 patient/version 5 doctor
refactored appointment participant fetch code
scheduler for doctor shows slots and appointments
added day choose to scheduler
added multiple appointments per slot dialog
telemedicine in doctor app working as intended
version 59 patient/version 6 doctor
fixed bugs for demonstration
added apply filters and clear filters
fixed videocall screen navigation
version 60 patient/version 7 doctor
fixed videocall navigation
doctor profile now fully works
version 62 patient/version 9 doctor
added dynamic home screen
last updates working
news working
buttons working




